2018-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test21-file-links):
	Remove `tramp--test-emacs27-p' check.

2018-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Use proper spelling "Tramp".

2018-06-27  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.3.4 released.

	* tramp-tests.el (tramp-test21-file-links): Adapt test.
	(tramp--test-emacs25-p): New defun.
	(tramp-test34-vc-registered): Use it.

2018-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-emacs27-p): New defun.
	(tramp-test11-copy-file, tramp-test12-rename-file)
	(tramp-test21-file-links, tramp-test24-file-acl)
	(tramp-test25-file-selinux, tramp--test-check-files): Use it.

2018-01-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test21-file-links): Do not call
	`make-symbolic-link' on w32.
	(tramp-test36-find-backup-file-name): Call also
	`convert-standard-filename' due to w32.
	(tramp--test-windows-nt): New defun.
	(tramp-test42-auto-load, tramp-test42-delay-load)
	(tramp-test42-recursive-load, tramp-test42-remote-load-path):
	Quote command due to w32.

2018-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (ert-x): Require it.
	(tramp-test10-write-region): Extend test.

2017-12-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-environment-variables-and-port-numbers):
	Adapt check for systems which do not support "echo -n".  (Bug#29712)
	(tramp-test41-asynchronous-requests):
	Use $REMOTE_PARALLEL_PROCESSES.  Flush cache prior file operations.

2017-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-environment-variables-and-port-numbers):
	Skip for macOS.  (Bug#29712)

2017-12-08  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.3.3 released.

	* tramp-tests.el (tramp-test21-file-links): Extend test.
	(tramp-test42-delay-load, tramp-test42-remote-load-path):
	Skip unless Emacs >= 26.
